@@ -83,4 +83,5 @@ if [istarget arm-*-pe] {
 
 if [istarget xscale-*] {
     run_dump_test "iwmmxt"
+    run_errors_test "iwmmxt-bad" "-mcpu=iwmmxt" "iWMMXt errors"
 }
